Cambios en sequelize sql native
