# swagger.json
@@ -238,7 +238,7 @@
         }
       }
     },
-    "/user/{id}/enable": {
+    "/user/{id}?enable=0": {
       "put": {
         "security": [
           {
@@ -258,13 +258,11 @@
             "required": true
           },
           {
-            "in": "body",
-            "name": "body",
+            "in": "path",
+            "type": "integer",
+            "name": "enable",
             "description": "Enable user",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/enableUser"
-            }
+            "required": true
           }
         ],
         "responses": {
@@ -286,7 +284,7 @@
         }
       }
     },
-    "/user/{id}/admin": {
+    "/user/{id}?admin=0": {
       "put": {
         "security": [
           {
@@ -306,13 +304,11 @@
             "required": true
           },
           {
-            "in": "body",
-            "name": "body",
+            "in": "path",
+            "type": "integer",
+            "name": "admin",
             "description": "Admin user",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/adminUser"
-            }
+            "required": true
           }
         ],
         "responses": {
@@ -670,7 +666,7 @@
         }
       }
     },
-    "/order/{id}/status": {
+    "/order/{id}?status=0": {
       "put": {
         "security": [
           {
@@ -692,13 +688,11 @@
             "required": true
           },
           {
-            "in": "body",
-            "name": "body",
+            "in": "path",
+            "type": "integer",
+            "name": "Status order",
             "description": "Status 1: NUEVO, 2: CONFIRMADO, 3: PREPARANDO, 4: ENVIANDO, 5: ENTREGADO, 6: CANCELADO",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/updatedOrder"
-            }
+            "required": true
           }
         ],
         "responses": {
@@ -760,46 +754,49 @@
       }
     },
     "listUser": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32",
-          "example": 1
-        },
-        "username": {
-          "type": "string",
-          "example": "Jonathan Jimenez S"
-        },
-        "fullname": {
-          "type": "string",
-          "example": "jta1223"
-        },
-        "email": {
-          "type": "string",
-          "example": "admin@admin.com"
-        },
-        "phone": {
-          "type": "string",
-          "example": "1234567890"
-        },
-        "address": {
-          "type": "string",
-          "example": "Cl 10 50 90"
-        },
-        "admin": {
-          "type": "integer",
-          "format": "int32",
-          "example": 1
-        },
-        "enable": {
-          "format": "int32",
-          "type": "integer",
-          "example": 1
-        },
-        "createAt": {
-          "type": "string",
-          "example": "2020-12-05T02:08:39.000Z"
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "example": 1
+          },
+          "username": {
+            "type": "string",
+            "example": "Jonathan Jimenez S"
+          },
+          "fullname": {
+            "type": "string",
+            "example": "jta1223"
+          },
+          "email": {
+            "type": "string",
+            "example": "admin@admin.com"
+          },
+          "phone": {
+            "type": "string",
+            "example": "1234567890"
+          },
+          "address": {
+            "type": "string",
+            "example": "Cl 10 50 90"
+          },
+          "admin": {
+            "type": "integer",
+            "format": "int32",
+            "example": 1
+          },
+          "enable": {
+            "format": "int32",
+            "type": "integer",
+            "example": 1
+          },
+          "createAt": {
+            "type": "string",
+            "example": "2020-12-05T02:08:39.000Z"
+          }
         }
       }
     },
@@ -852,6 +849,10 @@
           "type": "string",
           "example": "Jonathan Jimenez S"
         },
+        "password": {
+          "type": "string",
+          "example": "admin123"
+        },
         "fullname": {
           "type": "string",
           "example": "jta1223"
@@ -889,34 +890,37 @@
       }
     },
     "listProduct": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32",
-          "example": 1
-        },
-        "name": {
-          "type": "string",
-          "example": "Bagel de salmón"
-        },
-        "img": {
-          "type": "string",
-          "example": "https://www.petitchef.es/imgupl/recipe/focaccia-sandwich--md-166713p249402.jpg"
-        },
-        "price": {
-          "type": "integer",
-          "format": "int32",
-          "example": 100
-        },
-        "enable": {
-          "type": "integer",
-          "format": "int32",
-          "example": 1
-        },
-        "createdAt": {
-          "type": "string",
-          "example": "2020-12-04T19:37:58.000Z"
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "example": 1
+          },
+          "name": {
+            "type": "string",
+            "example": "Bagel de salmón"
+          },
+          "img": {
+            "type": "string",
+            "example": "https://www.petitchef.es/imgupl/recipe/focaccia-sandwich--md-166713p249402.jpg"
+          },
+          "price": {
+            "type": "integer",
+            "format": "int32",
+            "example": 100
+          },
+          "enable": {
+            "type": "integer",
+            "format": "int32",
+            "example": 1
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "2020-12-04T19:37:58.000Z"
+          }
         }
       }
     },
@@ -948,84 +952,87 @@
       }
     },
     "listOrder": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int32",
-          "example": 1
-        },
-        "created": {
-          "type": "string",
-          "example": "2020-12-05T21:19:38.000Z"
-        },
-        "User": {
-          "type": "object",
-          "properties": {
-            "fullname": {
-              "type": "string",
-              "example": "Jonathan Jimenez S"
-            },
-            "username": {
-              "type": "string",
-              "example": "jta1223"
-            },
-            "email": {
-              "type": "string",
-              "example": "jta1223@gmail.com"
-            },
-            "phone": {
-              "type": "string",
-              "example": "1234567890"
-            },
-            "address": {
-              "type": "string",
-              "example": "Cl 10 50 90"
-            }
-          }
-        },
-        "Status": {
-          "type": "object",
-          "properties": {
-            "name": {
-              "type": "string",
-              "example": "NUEVO"
-            }
-          }
-        },
-        "Payment": {
-          "type": "object",
-          "properties": {
-            "name": {
-              "type": "string",
-              "example": "EFECTIVO"
-            }
-          }
-        },
-        "Order_Products": {
-          "type": "array",
-          "items": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32",
+            "example": 1
+          },
+          "created": {
+            "type": "string",
+            "example": "2020-12-05T21:19:38.000Z"
+          },
+          "User": {
+            "type": "object",
             "properties": {
-              "quantity": {
-                "type": "integer",
-                "format": "int32",
-                "example": 1
+              "fullname": {
+                "type": "string",
+                "example": "Jonathan Jimenez S"
               },
-              "price": {
-                "type": "integer",
-                "format": "int32",
-                "example": 1
+              "username": {
+                "type": "string",
+                "example": "jta1223"
               },
-              "Product": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string",
-                    "example": "Sandwich de Focaccia"
-                  },
-                  "img": {
-                    "type": "string",
-                    "example": "https://www.petitchef.es/imgupl/recipe/focaccia-sandwich--md-166713p249402.jpg"
+              "email": {
+                "type": "string",
+                "example": "jta1223@gmail.com"
+              },
+              "phone": {
+                "type": "string",
+                "example": "1234567890"
+              },
+              "address": {
+                "type": "string",
+                "example": "Cl 10 50 90"
+              }
+            }
+          },
+          "Status": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "example": "NUEVO"
+              }
+            }
+          },
+          "Payment": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "example": "EFECTIVO"
+              }
+            }
+          },
+          "Order_Products": {
+            "type": "array",
+            "items": {
+              "properties": {
+                "quantity": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": 1
+                },
+                "price": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": 1
+                },
+                "Product": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "Sandwich de Focaccia"
+                    },
+                    "img": {
+                      "type": "string",
+                      "example": "https://www.petitchef.es/imgupl/recipe/focaccia-sandwich--md-166713p249402.jpg"
+                    }
                   }
                 }
               }
